@@ -1,5 +1,6 @@
 Version 2.02.170 - 
 ==================================
+  Fix systemd unit existence check for lvmconf --services --startstopservices.
   Check and use PATH_MAX buffers when creating vgrename device paths.
 
 Version 2.02.169 - 28th March 2017
